added a customized sidebar layout with no header and a code block around the site tagline

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,9 +7,7 @@ title: tradingbot
 owner: Jesse Frush
 email: jesse.frush@gmail.com
 linkedin_url: linkedin.com/in/jessefrush/
-description: >-
-  &nbsp;  
-  learn to automate a stock trader
+description: automate() the stock market
 baseurl: ""
 url: "https://turkycat.github.io"
 twitter_username: turkycat
