--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -14,15 +14,16 @@ twitter_username: turkycat
 github_username:  turkycat
 show_downloads: true
 google_analytics:
-github:
-  is_project_page: true
-img_root: /assets/images/
+github: [metadata]
+images: /assets/images/
 logo: /assets/images/logo.png
+about: /about
 
 # jekyll build settings
 theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
+  - jekyll-redirect-from
 
 lsi: false
 safe: true
@@ -33,6 +34,8 @@ gist:
 kramdown:
   math_engine: mathjax
   syntax_highlighter: rouge
+
+permalink: /:year/:short_month/:title
 
 # processing controls
 exclude:
