--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -11,7 +11,7 @@ source "https://rubygems.org"
 # This is the default theme for new Jekyll sites. You may change this to anything you like.
 # If you want to use GitHub Pages, remove the "gem "jekyll"" above and
 # uncomment the line below. To upgrade, run `bundle update github-pages`.
-#gem "github-pages", "~> 204", group: :jekyll_plugins
+gem "github-pages", "~> 204", group: :jekyll_plugins
 # If you have any plugins, put them here!
 group :jekyll_plugins do
   gem "jekyll-feed", "~> 0.12"
@@ -26,6 +26,5 @@ end
 
 # Performance-booster for watching directories on Windows
 gem "wdm", "~> 0.1.1", :install_if => Gem.win_platform?
-
-gem "github-pages", group: :jekyll_plugins
 gem "jekyll-include-cache", "~> 0.2.0"
+gem 'jekyll-seo-tag', '~> 2.0'
