moved the theme to a remote repository so I can reference it as a remote theme in github-pages

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,18 +15,19 @@ github_username:  turkycat
 show_downloads: true
 google_analytics:
 #github: [metadata]
-images: /assets/images/
-logo: /assets/images/logo.png
+images: /images/
+logo: /images/logo.png
 about: /about
 
 # jekyll build settings
-#remote_theme: pages-themes/minimal
+remote_theme: turkycat/minimal
 #theme: jekyll-theme-minimal
 plugins:
   - jekyll-feed
   - jekyll-redirect-from
   - jekyll-include-cache
   - jekyll-seo-tag
+  - jekyll-coffeescript
 
 lsi: false
 safe: true
@@ -58,4 +59,8 @@ include:
   - _layouts/
   - _posts/
   - _sass/
-  - assets/
+  - fonts/
+  - images/
+  - script/
+  - about.md
+  - index.md
