--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -17,6 +17,7 @@ group :jekyll_plugins do
   gem "jekyll-feed", "~> 0.12"
   gem "jekyll-include-cache", "~> 0.2.0"
   gem 'jekyll-seo-tag', '~> 2.0'
+  gem 'jekyll-redirect-from', '~> 0.15.0'
 end
 
 # Windows and JRuby does not include zoneinfo files, so bundle the tzinfo-data gem
