--- a/interactivebrokers/tws/tws_lib/tws_lib.csproj
+++ b/interactivebrokers/tws/tws_lib/tws_lib.csproj
@@ -39,13 +39,16 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="TwsRtdServer">
-      <HintPath>C:\TWS API\source\CSharpClient\TwsRtdServer\bin\Release\TwsRtdServer.dll</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TwsClient.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="C:\TWS API\source\CSharpClient\TwsRtdServer\TwsRtdServer.csproj">
+      <Project>{c8900fad-7fcc-4ff3-b2e4-2cea9ffa128d}</Project>
+      <Name>TwsRtdServer</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
