copied fundamentalsmessage class from TWS sample

--- a/interactivebrokers/tws/tws_lib/tws_lib.csproj
+++ b/interactivebrokers/tws/tws_lib/tws_lib.csproj
@@ -50,5 +50,8 @@
       <Name>TwsRtdServer</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="messages\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
